starter_code/stylesheets/style.css
@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
/* General Styling */

:root {
	/* Colors */
	--background-grey: #f4f3f4;
	--button-purple: #192592;
	--button-dark-purple: #101a7a;
	--main-titles-dark-grey: #2c303f;
	--paragraph-grey: #5b5e6d;
	--nav-grey: #5b5e6d;
	--border-grey: #c8c8c8;

	/* Font */
}

img {
	width: 100%;
}

h1,
h2,
h3,
h4 {
	color: var(--main-titles-dark-grey);
	font-family: "Lora", serif;
	font-weight: 700;
}

h1 {
	font-size: 40px;
}

h2,
h3 {
	text-align: center;
}

@media screen and (min-width: 768px) {
	h1 {
		font-size: 64px;
		padding-bottom: 20px;
	}

	h3 {
		text-align: left;
	}
}

p {
	color: var(--paragraph-grey);
	letter-spacing: 0.3px;
	margin-bottom: 0;
}

.signin-link {
	color: var(--button-purple);
	text-decoration: underline;
}

main,
section {
	padding: 30px 20px;
}

.start-btn,
.discover-btn {
	color: var(--background-grey);
	background-color: var(--button-purple);
	border: none;
	border-radius: 4px;
	padding: 15px 15px;
	text-transform: uppercase;
	font-size: medium;
	font-weight: 600;
	letter-spacing: 0.2px;
	width: 100%;
}

.start-btn:hover {
	background-color: var(--button-dark-purple);
}

i {
	color: var(--paragraph-grey);
	font-size: 20px;
}

ul {
	margin: 0;
}

input {
	border: 1px solid var(--background-grey);
	border-radius: 4px;
	padding: 15px 25px;
	width: 100%;
	margin-bottom: 20px;
}

@media screen and (min-width: 768px) {
	.start-btn,
	.discover-btn {
		width: max-content;
		padding: 15px 25px;
	}

	.discover-btn {
		margin: auto;
	}

	input {
		width: 400px;
		margin: 0 20px 0 0;
	}
}

form {
	display: flex;
	flex-direction: column;
	padding: 20px 0;
}

@media screen and (min-width: 768px) {
	form {
		flex-direction: row;
	}
}

.flex {
	display: flex;
}

.flex-justify {
	display: flex;
	justify-content: center;
	align-items: center;
}

.signed-in {
	text-align: center;
}

@media screen and (min-width: 768px) {
	.signed-in {
		text-align: left;
	}
}

.g-20 {
	gap: 20px;
}

.g-10 {
	gap: 10px;
}

/* Header */

header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 10px 30px;
	border-bottom: 1px solid var(--background-grey);
}

header img {
	width: 100px;
}

.navicon {
	display: flex;
	flex-direction: column;
	gap: 4px;
	cursor: pointer;
}

.navicon > div {
	width: 30px;
	height: 4px;
	background-color: var(--nav-grey);
}

header nav ul {
	display: flex;
	align-items: center;
	gap: 30px;
	list-style: none;
	margin: 0;
}

header nav ul a {
	color: var(--nav-grey);
	text-decoration: none;
}

header nav ul li:last-child {
	border: 1px solid var(--nav-grey);
	border-radius: 4px;
	padding: 6px 10px;
}

header nav ul li:last-child:hover {
	background-color: var(--background-grey);
}

header nav ul a:last-child:hover {
	color: var(--button-dark-purple);
}

/* Main */

main h1 {
	max-width: 10ch;
}

main img {
	width: 85%;
}

/* Companies */

.companies {
	background-color: var(--background-grey);
	border-block: 1px solid var(--border-grey);
}

.companies > .container > * {
	margin-bottom: 30px;
}

.companies p {
	text-align: center;
}

.discover-btn {
	color: var(--button-purple);
	background-color: #fff;
	border: solid 1px var(--button-purple);
	display: block;
	text-align: center;
	text-decoration: none;
}

.discover-btn:hover {
	background-color: var(--background-grey);
	color: var(--button-dark-purple);
}

.companies-logos > div {
	border-bottom: 1px solid var(--border-grey);
	min-height: 140px;
}

.companies-logos > div:last-child {
	border: none;
}

.companies img {
	width: 60%;
	padding: 30px 20px;
}

@media screen and (min-width: 768px) {
	.companies-logos > div {
		border: none;
	}

	.companies-logos > div:nth-child(1) {
		border-bottom: 0.5px solid var(--border-grey);
		border-right: 0.5px solid var(--border-grey);
	}

	.companies-logos > div:nth-child(2) {
		border-bottom: 0.5px solid var(--border-grey);
		border-left: 0.5px solid var(--border-grey);
	}

	.companies-logos > div:nth-child(5) {
		border-top: 0.5px solid var(--border-grey);
		border-right: 0.5px solid var(--border-grey);
	}

	.companies-logos > div:nth-child(6) {
		border-top: 0.5px solid var(--border-grey);
		border-left: 0.5px solid var(--border-grey);
	}
}

@media screen and (min-width: 992px) {
	.companies-logos > div {
		border: none;
	}

	.companies-logos > div:nth-child(2) {
		border-right: 0.5px solid var(--border-grey);
	}

	.companies-logos > div:nth-child(3) {
		border-bottom: 0.5px solid var(--border-grey);
		border-left: 0.5px solid var(--border-grey);
	}

	.companies-logos > div:nth-child(4) {
		border-top: 0.5px solid var(--border-grey);
		border-right: 0.5px solid var(--border-grey);
	}

	.companies-logos > div:nth-child(5) {
		border-left: 0.5px solid var(--border-grey);
	}
}

/* Try */

.try {
	border-bottom: 1px solid var(--background-grey);
}

.submit-box-2 {
	display: flex;
	justify-content: flex-end;
}

/* Footer link tree */

footer {
	padding: 20px 0 0;
}

footer > div {
	padding: 30px 20px;
}

.slack-icon {
	width: 50px;
}

.link-section {
	display: flex;
	flex-direction: column;
	gap: 10px;
}

.link-category {
	color: var(--nav-grey);
	text-transform: uppercase;
	font-weight: 700;
}

.link-section a {
	display: block;
	color: var(--nav-grey);
	text-decoration: none;
	font-weight: 300;
}

.footer-important {
	background-color: var(--background-grey);
	font-size: 14px;
}

.footer-important img {
	width: 20px;
}

.footer-important-links {
	list-style: none;
	gap: 20px;
	padding: 0;
}

@media screen and (max-width: 768px) {
	.footer-important-links {
		display: flex;
		justify-content: center;
	}
}

.footer-important-links a {
	color: var(--main-titles-dark-grey);
	text-decoration: none;
	font-weight: 600;
}

.fa-chevron-down {
	font-size: 14px;
}

